# RankCheck

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
cmake/: FindPoco.cmake
res/: CMakeLists.txt  rankcheck.json
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  MainClient.cpp
src/Client/GUI3/: Application.cpp  Application.hpp  CMakeLists.txt  Container.cpp  Container.hpp  Interface.cpp  Interface.hpp  Piece.cpp  Piece.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Types.hpp  Widget.cpp  Widget.hpp
src/Client/GUI3/Events/: CMakeLists.txt  Callback.hpp  Key.cpp  Key.hpp  KeyEvent.hpp  MouseEvent.hpp  StateEvent.hpp
src/Client/GUI3/Models/: CMakeLists.txt  StringList.cpp  StringList.hpp  StringTableDataModel.cpp  StringTableDataModel.hpp  StringTableViewModel.cpp  StringTableViewModel.hpp  TableViewModel.cpp  TableViewModel.hpp
src/Client/GUI3/Pieces/: Button.cpp  Button.hpp  CMakeLists.txt  Image.cpp  Image.hpp  Text.cpp  Text.hpp
src/Client/GUI3/Rendering/: CMakeLists.txt  Style.cpp  Style.hpp
src/Client/GUI3/Rendering/Primitives/: Box.cpp  Box.hpp  CMakeLists.txt  Gradient.cpp  Gradient.hpp  Outline.cpp  Outline.hpp  TintedBox.cpp  TintedBox.hpp
src/Client/GUI3/Utils/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  MouseMonitor.cpp  MouseMonitor.hpp  NullResourceManager.cpp  NullResourceManager.hpp  VertexBuffer.cpp  VertexBuffer.hpp  ViewModelCache.hpp
src/Client/GUI3/Widgets/: CMakeLists.txt  TestWidget.cpp  TestWidget.hpp
src/Client/GUI3/Widgets/Controls/: Button.cpp  Button.hpp  CMakeLists.txt  Checkbox.cpp  Checkbox.hpp  Menu.cpp  Menu.hpp  Slider.cpp  Slider.hpp  Table.cpp  Table.hpp  Text.cpp  Text.hpp  TextField.cpp  TextField.hpp
src/Client/GUI3/Widgets/Graphics/: CMakeLists.txt  Gradient.cpp  Gradient.hpp
src/Client/GUI3/Widgets/Misc/: CMakeLists.txt  MouseCursor.cpp  MouseCursor.hpp  Window.cpp  Window.hpp
src/Client/GUI3/Widgets/Panels/: AbstractPanel.hpp  CMakeLists.txt  FillPanel.cpp  FillPanel.hpp  Panel.cpp  Panel.hpp  SettingsPanel.cpp  SettingsPanel.hpp  SplitPanel.cpp  SplitPanel.hpp
src/Client/Graphics/: BitmapText.cpp  BitmapText.hpp  CMakeLists.txt  FloatColor.cpp  FloatColor.hpp  GradientRect.cpp  GradientRect.hpp  TexturePacker.cpp  TexturePacker.hpp  UtilitiesSf.cpp  UtilitiesSf.hpp
src/Client/RankCheck/: CMakeLists.txt  CountryLookup.cpp  CountryLookup.hpp  GameFolder.cpp  GameFolder.hpp  GameLogReader.cpp  GameLogReader.hpp  LeagueReader.cpp  LeagueReader.hpp  LogReader.cpp  LogReader.hpp  NautsNames.cpp  NautsNames.hpp  NetworkLogReader.cpp  NetworkLogReader.hpp  NetworkLogStartupReader.cpp  NetworkLogStartupReader.hpp  PersistentLogReader.cpp  PersistentLogReader.hpp  PlayerCard.cpp  PlayerCard.hpp  PlayerDB.cpp  PlayerDB.hpp  PlayerData.cpp  PlayerData.hpp  RankCheckWidget.cpp  RankCheckWidget.hpp  RankChecker.cpp  RankChecker.hpp  RatingHistoryEntry.cpp  RatingHistoryEntry.hpp  ReplayParser.cpp  ReplayParser.hpp  ReplayWatcher.cpp  ReplayWatcher.hpp  UsernameLookup.cpp  UsernameLookup.hpp  WinRes.rc
src/Client/System/: CMakeLists.txt  WOSApplication.cpp  WOSApplication.hpp  WOSInterface.cpp  WOSInterface.hpp  WOSMenu.cpp  WOSMenu.hpp  WOSRenderer.cpp  WOSRenderer.hpp  WOSResourceManager.cpp  WOSResourceManager.hpp
src/Shared/: CMakeLists.txt
src/Shared/Config/: CMakeLists.txt  CompositeTypes.hpp  Config.cpp  Config.hpp  ConfigAggregator.cpp  ConfigAggregator.hpp  ConfigSource.cpp  ConfigSource.hpp  DataTypes.hpp  JSONConfig.cpp  JSONConfig.hpp  NullConfig.cpp  NullConfig.hpp  Paths.cpp  Paths.hpp
src/Shared/Content/: CMakeLists.txt  Package.cpp  Package.hpp
src/Shared/Utils/: CMakeLists.txt  Clipboard.cpp  DataStream.cpp  DataStream.hpp  DataStream.inl  DebugLog.cpp  DebugLog.hpp  Endian.hpp  Error.cpp  Error.hpp  FPS.cpp  FPS.hpp  FileChooser.cpp  FileChooser.hpp  Hash.cpp  Hash.hpp  LockableVector.hpp  MakeUnique.hpp  MiscMath.hpp  OSDetect.hpp  Range.hpp  StaticKey.hpp  StrNumCon.hpp  StringStream.cpp  StringStream.hpp  SystemMessage.cpp  SystemMessage.hpp  Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp  VectorMul.hpp  Zlib.cpp  Zlib.hpp
src/Shared/Utils/Debug/: CMakeLists.txt  CrashHandler.cpp  CrashHandler.hpp  StackTrace.cpp  StackTrace.hpp  TypeInfo.cpp  TypeInfo.hpp
src/Shared/Utils/Event/: CallbackManager.hpp  EventListener.hpp  EventManager.hpp
src/Shared/Utils/Filesystem/: CMakeLists.txt  DirectoryObserver.cpp  DirectoryObserver.hpp  FileObserver.cpp  FileObserver.hpp
